content/docs-archive/v0.8.8-rc1/features/mcp.mdx
---
title: MCP
icon: Blocks
description: Learn how LibreChat leverages Model Context Protocol (MCP) to provide seamless integration with external tools, data sources, and specialized services.
---

Model Context Protocol (MCP) is an open protocol that standardizes how applications provide context to Large Language Models (LLMs). Think of MCP as the **"USB-C of AI"** - just as USB-C provides a universal connection standard for electronic devices, MCP offers a standardized way to connect AI models to diverse tools, data sources, and services.

LibreChat leverages MCP to dramatically expand what your AI agents can do, allowing you to integrate everything from file system access, web browsers, specialized APIs, to custom business tools.

## Why MCP Matters

LLMs are limited to their built-in capabilities. With MCP, LibreChat breaks down these walls by:

- **Connecting to any tool or service** that provides an MCP server
- **Standardizing integrations** so you don't need to edit LibreChat's code for each tool
- **Supporting multi-user environments** with proper authentication and isolation
- **Providing a growing ecosystem** of dynamic, ready-to-use integrations

## How MCP Works in LibreChat

LibreChat provides two ways to use MCP servers, either in the chat area or with agents.

You can configure MCP servers manually in your `librechat.yaml` file or by using [smithery.ai](https://smithery.ai) to find and install MCP servers into `librechat.yaml` ([see example below](#basic-configuration)). Any time you add or edit an MCP server, you will need to restart LibreChat to initialize the connections.

### OAuth Callback URL

For OAuth-enabled MCP servers, the LibreChat callback URL is:

```text
${DOMAIN_SERVER}/api/mcp/<server-name>/oauth/callback
```

`<server-name>` is the key used under `mcpServers` in `librechat.yaml` or the server name created in the MCP Settings UI. For example, a server named `salesforce` with `DOMAIN_SERVER=https://chat.example.com` uses `https://chat.example.com/api/mcp/salesforce/oauth/callback`.

Register this exact callback URL with the OAuth provider. Local Docker installs usually use `http://localhost:3080` as the base URL.

### In Chat Area

![MCP Tools in Chat Area](/images/agents/mcp_chat.png)

LibreChat displays configured MCP servers directly in the chat area when using traditional endpoints (OpenAI, Anthropic, Google, Bedrock, etc.):

- Select any non-agent endpoint first, and a tool-compatible model
- MCP servers appear in a dropdown in the chat interface below your text input
- When selected, all tools from that server become available to your current model
- Quick access to MCP tools without creating an agent, allowing multiple servers to be used at once

To disable MCP servers from appearing in the chat dropdown (keeping them agent-only), set [`chatMenu: false`](/v0.8.8-rc1/docs/configuration/librechat_yaml/object_structure/mcp_servers#chatmenu) in your configuration:

```yaml
mcpServers:
  internal-tools:
    command: npx
    args: ['-y', 'internal-mcp-server']
    chatMenu: false # Only available in agent builder
```

### With Agents

MCP servers integrate seamlessly with LibreChat Agents:

1. Create or edit an agent
2. Open **Add tools** in the Agent Builder and select **MCP**
3. Select an MCP server; each server appears as a single catalog entry
4. Expand the selected server to enable or disable individual tools
5. Save your agent

![MCP Tools in Agent Builder](/images/mcp/mcp_ui_agent.png)

This higher-level organization keeps the interface manageable - even servers with 20+ tools (like Spotify) appear as single entries that can be expanded for granular control.

### Basic Configuration

Add MCP servers to your `librechat.yaml` file manually:

```yaml
mcpServers:
  # ClickHouse Cloud
  clickhouse-cloud:
    type: streamable-http
    url: https://mcp.clickhouse.cloud/mcp

  # File system access
  filesystem:
    command: npx
    args:
      - -y
      - '@modelcontextprotocol/server-filesystem'
      - /path/to/your/documents

  # Web browser automation
  puppeteer:
    command: npx
    args:
      - -y
      - '@modelcontextprotocol/server-puppeteer'

  # Production-ready cloud service
  business-api:
    type: streamable-http
    url: https://api.yourbusiness.com/mcp
    headers:
      X-User-ID: '{{LIBRECHAT_USER_ID}}'
      Authorization: 'Bearer ${API_TOKEN}'
    timeout: 30000
    serverInstructions: true
```

### Adding MCP Servers in the UI

You can also add and configure MCP servers directly from the LibreChat interface without editing any configuration files or restarting the server.

#### Step 1: Open the MCP Settings Panel

Navigate to the **MCP Settings** panel from the right sidebar. You'll see any existing MCP servers listed here along with a **+** button to add new ones.

![MCP Settings Panel](/images/mcp/mcp_ui_settings_panel.png)

#### Step 2: Fill Out Server Details

Press the **+** button and fill out your MCP server name, description, URL, transport type, and authentication method, then click **Create**.

![Add MCP Server Dialog](/images/mcp/mcp_ui_configure.png)

Your new server will appear in the MCP Settings panel with a confirmation toast.

![MCP Server Created Successfully](/images/mcp/mcp_ui_success_registered.png)

#### Step 3: Check Connection Status and Authenticate

Review the [connection status indicator](#connection-status-indicators) for your new server. If the server requires OAuth authentication, the status will show as disconnected. Click the server's authenticate/connect button (you can do this either by clicking on the MCP server itself in the chat dropdown menu, or by clicking on the connection icon first to be taken to a dialog with more information on the connection state) to begin the authentication flow.

![Connection Status - Disconnected](/images/mcp/mcp_ui_unconnected.png)

Once initiated, the status indicator will update to show that authentication is in progress.

![Connection Status - Authenticating](/images/mcp/mcp_ui_authenticating.png)

#### Step 4: Continue in the OAuth Tab

A new browser tab will open for the OAuth provider. Verify the callback URL and click **Continue** to authorize LibreChat.

![OAuth Continue Prompt](/images/mcp/mcp_ui_callback_confirm.png)

#### Step 5: Authentication Successful

After authenticating, you'll see a success confirmation. This window will automatically close and redirect you back to LibreChat.

![Authentication Successful](/images/mcp/mcp_ui_success_redirect.png)

#### Step 6: Server Ready for Use

LibreChat acknowledges the successful authentication and automatically selects the MCP server for use within your conversation. The server now shows a connected status indicator and is checked in the MCP Servers dropdown.

![MCP Server Authenticated and Auto-Selected](/images/mcp/mcp_ui_done.png)

Your new MCP server is also available in the Agent Builder, where you can add its tools to any agent and customize what subset of tools are allowed.

![MCP Server Available in Agent Builder](/images/mcp/mcp_ui_agent.png)

#### Credential Variables for UI-Created Servers

When adding an MCP server through the UI, you can require users to provide their own API keys. In the Authentication section of the MCP Server Builder dialog, select "API Key" and check **"User provides key"**. Choose the header format (Bearer, Basic, or Custom) and save the server.

Behind the scenes, LibreChat automatically creates a `customUserVars` entry named `MCP_API_KEY` and configures the appropriate header template (e.g., `Authorization: Bearer {{MCP_API_KEY}}`). Each user provides their own key through the MCP Tool Select Dialog when configuring an agent — the same UI used for [YAML-defined `customUserVars`](#user-provided-credentials).

When an administrator or user API key is configured, LibreChat treats the server as API-key authenticated and skips OAuth auto-detection. An explicit OAuth configuration still takes precedence. If a UI-created API-key server was saved by an older LibreChat version and remains stuck in **OAuth Required**, edit and save the server once so its stored connection metadata is refreshed.

<Callout type="warning">
For security, UI-created (DB-sourced) MCP servers can **only** resolve `customUserVars` placeholders (`{{VAR_NAME}}`). Server-side environment variables (`${ENV_VAR}`), user profile fields (`{{LIBRECHAT_USER_*}}`), and OIDC tokens (`{{LIBRECHAT_OPENID_*}}`) are intentionally blocked to prevent unauthorized access to server secrets or other users' data. For full placeholder support, configure the server in `librechat.yaml` instead.
</Callout>

### Adding MCP Servers with Smithery

Smithery.ai provides a streamlined way to discover and install MCP servers for LibreChat. Follow these steps to get started:

#### Step 1: Search for MCP Servers

Visit [smithery.ai](https://smithery.ai) and search for the MCP server you want to add to your LibreChat instance.

![Smithery Search Interface](/images/mcp/mcp_smithery_search.png)

#### Step 2: Select Your MCP Server

Click on the MCP server from the search results to view details and available tools.

![MCP Server Details Page](/images/mcp/mcp_smithery_mcp_server.png)

#### Step 3: Configure for LibreChat

Navigate to the **Auto** tab in the **Connect** section and select **LibreChat** as your desired client.

![LibreChat Integration Setup](/images/mcp/mcp_smithery_librechat.png)

#### Step 4: Install the MCP Server

Copy and run the generated command in your terminal to install the MCP server.

![Installation Command](/images/mcp/mcp_smithery_copy.png)

#### Step 5: Restart and Verify

Your MCP server is now installed and configurable in `librechat.yaml`. Restart LibreChat to initialize the connections and start using your new MCP server.

![MCP Server Successfully Installed](/images/mcp/mcp_show_installed.png)
_MCP server installed through smithery.ai and ready for use in LibreChat_

For detailed configuration options and examples, see:

- [MCP Server Guides](/v0.8.8-rc1/docs/mcp_servers)
- [MCP Servers Configuration](/v0.8.8-rc1/docs/configuration/librechat_yaml/object_structure/mcp_servers)
- [Agent Configuration](/v0.8.8-rc1/docs/configuration/librechat_yaml/object_structure/agents)
- [Advanced Agent Features](/v0.8.8-rc1/docs/features/agents#model-context-protocol-mcp)
- [Agent Plugins](/v0.8.8-rc1/docs/features/agent_plugins) for experimentally bundling deployment MCP servers with Skills

## MCP Server Management

LibreChat provides comprehensive tools for managing MCP server connections with connection status tracking and OAuth authentication and initialization support in the UI.

### Connection Status Indicators

LibreChat displays dynamic status icons showing the current state of each MCP server in the chat dropdown and settings panel:

![MCP Server Status Icons](/images/mcp/mcp_server_status_icons.png)

**Status Types:**

- **Connected** (green gear): Server is connected and has configurable customUserVars
- **OAuth Required** (amber key): Server requires OAuth authentication
- **Disconnected** (orange plug): Server connection failed or lost
- **Initializing** (blue loader): Server is starting up or reconnecting
- **Error** (red triangle): Server encountered an error
- **Cancelling** (red x): OAuth flow is being cancelled

### Server Initialization

You can initialize or re-initialize MCP servers directly from the interface:

**One click:**

- One-click initialization from the MCP server selection dropdown

  <Video src="/videos/mcp_one_click_init.mp4" title="One-click MCP initialization" />

**From MCPConfigDialog:**

- Click the status icon next to an MCP server in the Chat Dropdown to open the MCPConfigDialog
- Configure custom user variables and click the Authenticate/Initialize button depending on the server authentication type

       <Video src="/videos/mcp_config_dialog_auth.mp4" title="MCP config dialog authentication" />

  **From MCP Settings Panel:**

- Click any server in the server list section of MCP Settings Panel to access configuration and initialization controls
- Configure custom user variables and click the Authenticate/Initialize button depending on the server authentication type

  <Video src="/videos/mcp_settings_init.mp4" title="MCP settings panel initialization" />

Initialization failures now distinguish an unreachable server, missing `customUserVars`, an OAuth connection that must be authenticated again, and a generic initialization failure. Use the named missing variables or reauthentication action in the message before retrying; the server no longer needs to be removed and re-added for these cases.

If an Agent explicitly expects MCP tools but none can be resolved at run start, LibreChat fails the run with connection and access guidance instead of silently running without those tools.

MCP servers that emit `notifications/tools/list_changed` can update their tool catalog without a LibreChat restart. LibreChat fetches the current list from the live connection, publishes added tools, and stops advertising tools the server removed. Reconnects also synchronize the catalog before the connection is treated as ready.

For Streamable HTTP servers, a reconnect can briefly return HTTP `409` when the server still holds a stale standalone SSE stream for the old session. LibreChat treats this as transient, tears down the stale session, and rebuilds the connection automatically; no operator action is needed when recovery succeeds. If the rebuilt connection also fails, LibreChat continues to surface the underlying connection error.

LibreChat classifies Streamable HTTP responses from the parsed `Content-Type` media type rather than a substring match. Parameters cannot make a non-SSE response appear to be `text/event-stream`, so response-size errors continue through the correct SSE or non-SSE handling path.

### MCP Settings Panel Visibility

The MCP Settings Panel appears in the right sidebar when LibreChat detects MCP servers that might require user intervention during their initialization. The panel will be visible when any configured server meets one of these criteria:

- **Custom User Variables**: Server has `customUserVars` defined which may contain user-provided credentials
- **OAuth Authentication**: Server is detected as requiring OAuth authentication during startup
- **Manual Initialization**: Server has `startup: false` configured, requiring manual initialization

## LibreChat-Specific Features

LibreChat's MCP implementation is designed for highly configurable, real-world, multi-user environments.

### User-Specific Connections

- Each user gets their own isolated connection to MCP servers
- User authentication and permissions are respected
- Personal data and context remain private

### Sharing MCP Servers

MCP servers participate in LibreChat's [granular access control](/v0.8.8-rc1/docs/features/access_control) system. In addition to servers defined in `librechat.yaml` (which are managed by admins and governed by [`interface.mcpServers`](/v0.8.8-rc1/docs/configuration/librechat_yaml/object_structure/interface#mcpservers) feature permissions), user-created MCP servers have their own ACL and can be shared with specific **users**, **groups**, **roles**, or **publicly**, at Viewer, Editor, or Owner level.

The `USE`, `CREATE`, `SHARE`, and `SHARE_PUBLIC` feature flags under `interface.mcpServers` control who is allowed to create and share MCP servers at all. See [Access Control](/v0.8.8-rc1/docs/features/access_control) for how the permission layers compose.

### Dynamic User Context

MCP servers can access user information through placeholders in **URLs and headers** (for SSE and Streamable HTTP transports):

```yaml
mcpServers:
  user-api:
    type: streamable-http
    url: https://api.example.com/users/{{LIBRECHAT_USER_USERNAME}}/mcp
    headers:
      X-User-ID: '{{LIBRECHAT_USER_ID}}'
      X-User-Email: '{{LIBRECHAT_USER_EMAIL}}'
      X-User-Role: '{{LIBRECHAT_USER_ROLE}}'
      Authorization: 'Bearer ${API_TOKEN}'
```

Available placeholders include:

- `{{LIBRECHAT_USER_ID}}` - Unique user identifier
- `{{LIBRECHAT_USER_EMAIL}}` - User's email address
- `{{LIBRECHAT_USER_ROLE}}` - User role (admin, user, etc.)
- `{{LIBRECHAT_USER_USERNAME}}` - Username
- And many more (see [MCP Servers Configuration](/v0.8.8-rc1/docs/configuration/librechat_yaml/object_structure/mcp_servers#headers) for complete list)

YAML-defined MCP servers can also use `{{LIBRECHAT_OPENID_*}}`, `{{LIBRECHAT_GRAPH_*}}`, and `{{LIBRECHAT_BODY_*}}` placeholders. `{{LIBRECHAT_BODY_*}}` values are request-scoped, so LibreChat creates connections for the active run, reuses them across tool calls in that run, and cleans them up when the request ends. Request-scoped servers are excluded from the persistent tool cache so request-specific headers and URLs are not reused outside the active run. Because their tool list cannot be resolved before a chat request exists, the Agent Builder exposes one runtime-tools selection for the complete server and resolves its tools at run time. Completing OAuth stores authorization but defers the connection until the first run supplies request context. User, OpenID, and Graph placeholders are user-scoped; HTTP transports refresh their resolved headers before each tool call without requiring a reconnect by themselves.

### Server Instructions

`serverInstructions` is a LibreChat feature that dynamically adds configured instructions when any tool from that MCP server is selected:

```yaml
mcpServers:
  filesystem:
    command: npx
    args: ['-y', '@modelcontextprotocol/server-filesystem', '/docs']
    serverInstructions: |
      When accessing files:
      - Always check file permissions first
      - Use absolute paths for reliability
      - Handle errors gracefully
```

Options:

- `true`: Use instructions advertised by the server when available
- `false`: Disable instructions
- `string`: Use the custom instructions verbatim (shown above)

LibreChat preserves this configured declaration separately from instructions fetched while inspecting the server. A `true` declaration therefore remains enabled across inspection and cached registry reloads, while a custom string remains authoritative.

### Timeout Configuration

For long-running MCP operations, configure appropriate timeouts for both initialization and tool operations.

```yaml
mcpServers:
  data-processor:
    type: streamable-http
    url: https://api.example.com/mcp
    initTimeout: 15000 # 15 seconds for server initialization
    timeout: 60000 # 60 seconds for tool operations
```

**Note**: If operations are still being cut short, check your proxy configuration (e.g., nginx, traefik, etc.) which may be severing connections prematurely due to default timeouts.

### User Provided Credentials

You can allow users to provide their own credentials for MCP servers through `customUserVars`. This enables secure, user-specific authentication without storing credentials in configuration files.

```yaml
mcpServers:
  my-api-server:
    type: streamable-http
    url: 'https://api.example.com/mcp'
    headers:
      X-Auth-Token: '{{MY_API_KEY}}' # Uses the user-provided value
    customUserVars:
      MY_API_KEY:
        title: 'API Key'
        description: "Enter your personal API key from <a href='https://example.com/keys' target='_blank'>your account settings</a>"
```

Users can configure these credentials:

- **From Chat Area**: Click the settings icon next to configurable MCP servers in the tool selection dropdown
- **From MCP Settings Panel**: Access "MCP Settings" in the right panel to manage credentials for all configured servers

#### Reinitializing MCP Servers with User Credentials

For MCP servers that require user-specific credentials before they can be used (e.g., `PAT_TOKEN`'s in [GitHub’s official MCP server](https://github.com/github/github-mcp-server)), LibreChat allows users to provide these credentials and then reinitialize the MCP server from within the UI without restarting the whole application:

1. When you select an MCP that uses `customUserVars`, you will be able to **Save** or **Revoke** a `customUserVar`'s value for the selected MCP server from within the MCP Panel.
2. After saving a value for a `customUserVar`, click the reinitialize button (an icon with circular arrows next to each server name in the MCP Panel).
3. LibreChat will attempt to connect to the server using your provided credentials and notify you with a toast whether the reinitialization process has succeeded or failed.

> _Tip: If you know a server will require credentials not available at first startup, you can add `startup: false` to its configuration. This tells LibreChat to not attempt to connect to that server until it is manually reinitialized in the UI._

**Example:**

```yaml
mcpServers:
  github-mcp:
    type: streamable-http
    url: 'https://api.githubcopilot.com/mcp/'
    headers:
      Authorization: '{{PAT_TOKEN}}'
    customUserVars:
      PAT_TOKEN:
        title: 'GitHub PAT Token'
        description: 'GitHub Personal Access Token'
    startup: false
```

### OAuth Authentication

LibreChat supports OAuth authentication for MCP servers, following Anthropic's recommendation for secure MCP connections. OAuth provides a standardized, secure way to authenticate without storing long-lived credentials.

#### Supported OAuth Flows

LibreChat MCP servers support OAuth 2.0 with:

- **Authorization Code Flow with PKCE**: Recommended for maximum security
- **Client Discovery**: Automatic client registration when supported by the OAuth provider
- **Refresh Tokens**: Automatic token renewal when available
- **Token endpoint discovery**: Preconfigured clients can discover whether the provider expects client credentials in the POST body or an HTTP Basic authorization header

In the MCP Builder, **Token Exchange Method** offers **Auto**, **Default (POST request)**, and **Basic authorization header**. Auto leaves the method unset so LibreChat can use trusted provider metadata, falling back to Basic authentication when the provider does not advertise a method.

#### Configuration Examples

```yaml
mcpServers:
  # Public remote MCP server for PayPal, uses OAuth Client Discovery
  # ❌ Refresh Tokens: you may need to re-authenticate periodically
  # More info: https://developer.paypal.com/tools/mcp-server/
  paypal:
    type: 'sse'
    initTimeout: 150000 # higher timeout to allow for initial authentication
    url: 'https://mcp.paypal.com/sse'

  # Example self-hosted remote MCP server for Spotify, uses OAuth Client Discovery
  # ✅ Refresh Tokens: refreshes token for authentication automatically
  # Hosted on Cloudflare Workers, more info: https://github.com/LibreChat-AI/spotify-mcp
  spotify:
    type: 'streamable-http'
    initTimeout: 150000
    url: 'https://mcp-spotify-oauth-example.account.workers.dev/mcp'
```

#### OAuth Authentication Flow

When you first configure an OAuth-enabled MCP server:

1. **Initial Connection**: LibreChat attempts to connect to the MCP server
2. **Authentication Required**: If no valid token exists, you'll see an OAuth authentication indicator in the chat dropdown for that server
3. **Button Interface**: Click the authentication indicator to open the MCP configuration dialog and begin the OAuth flow
4. **Continue or use another device**: Continue in the current browser, copy the authorization link, or reveal a QR code to open it on another device
5. **Browser Redirect**: Complete authentication with the OAuth provider
6. **Return Handling**: LibreChat automatically processes the OAuth callback once you've authenticated
7. **Token Storage**: LibreChat securely stores the tokens for future use
8. **Connection Established**: Once you've authenticated, the MCP server will be connected and you can use it in your chat

#### OAuth Callback URL

When an MCP server uses OAuth, LibreChat exposes a callback endpoint that the OAuth provider redirects to after successful authorization.

The callback URL must follow this format:

`${baseUrl}/api/mcp/${serverName}/oauth/callback`

Where `${serverName}` is the MCP server key defined in your `librechat.yaml` configuration. LibreChat handles the redirect at this endpoint, completes the token exchange, and associates the credentials with the corresponding MCP server.

<Callout type="info" title="OAuth Callback URL Example">
Given the following MCP server configuration:

```yaml
mcpServers:
  # Example self-hosted remote MCP server for Spotify, uses OAuth Client Discovery
  # ✅ Refresh Tokens: refreshes token for authentication automatically
  # Hosted on Cloudflare Workers, more info: https://github.com/LibreChat-AI/spotify-mcp
  spotify:
    type: 'streamable-http'
    initTimeout: 150000
    url: 'https://mcp-spotify-oauth-example.account.workers.dev/mcp'
```

The callback URL would be `${baseUrl}/api/mcp/spotify/oauth/callback`.

</Callout>

Note:

- The callback URL must be registered exactly with the OAuth provider for the flow to work.
- Other paths such as `/api/oauth/callback` or `/api/oauth/openid/callback` are not valid for MCP OAuth flows.

#### Token Management

LibreChat handles OAuth tokens intelligently:

- **Secure Storage**: Tokens are encrypted and stored securely
- **Automatic Refresh**: When refresh tokens are available, LibreChat automatically renews expired access tokens
- **Silent 401 Recovery**: If an OAuth MCP connection receives a mid-session authentication rejection, LibreChat coordinates one bounded refresh and reconnect attempt per user and server. Concurrent callers share that recovery result before LibreChat surfaces a new authentication prompt.
- **Session Management**: Each user maintains their own OAuth sessions for multi-user environments

Stored OAuth clients and tokens are bound to the MCP server URL and OAuth client/endpoint settings. Changing those settings requires users to authenticate again. When editing a UI-created server that retains a stored `client_secret`, re-enter the secret when changing a binding field such as the server URL, client ID, authorization URL, token URL, or token authentication method.

In horizontally scaled deployments, OAuth flow status and bound-token readiness can be reconciled across LibreChat pods. The UI reports a server as ready only after post-OAuth initialization succeeds, even when the callback and status poll reach different pods. Callbacks from superseded attempts are rejected.

When Redis is enabled, application-level MCP catalog generations and publication revisions are coordinated across replicas. Redis Cluster deployments use slot-safe catalog keys and updates, so startup synchronization and `tools/list_changed` refreshes do not require a single-node Redis layout.

Each user will be prompted to authenticate with their own OAuth login when they first use an OAuth-enabled MCP server. This ensures that connection and authentication details are unique to each user, maintaining security and privacy in multi-user environments.

#### OAuth Timing

MCP OAuth completion uses its own server-configured timeout instead of reusing the MCP server `initTimeout`. By default, LibreChat waits up to 10 minutes for a user to complete MCP OAuth and keeps the flow state for 15 minutes.

Use these environment variables when an OAuth provider or user workflow needs more time:

```bash filename=".env"
MCP_OAUTH_HANDLING_TIMEOUT=600000
MCP_OAUTH_FLOW_TTL=900000
```

`MCP_OAUTH_FLOW_TTL` is clamped to outlive `MCP_OAUTH_HANDLING_TIMEOUT`, so callbacks near the deadline can still find their flow state. The MCP server-card polling window follows the configured handling timeout.

![User-specific OAuth authentication flow](/images/agents/mcp_oauth_flow.png)

> Note: The tokens shown during app startup are for app-level initialization only and are not used for individual user connections.

Example of automatic token refresh:

```bash
[MCP][spotify] Access token missing
[MCP][spotify] Attempting to refresh token
[MCP][spotify] Successfully refreshed and stored OAuth tokens
[MCP][spotify] ✓ Initialized
```

#### Best Practices

1. **Use OAuth when available**: Prefer OAuth over API keys for better security
2. **Configure appropriate timeouts**: Use `MCP_OAUTH_HANDLING_TIMEOUT` and `MCP_OAUTH_FLOW_TTL` for OAuth completion windows; use `initTimeout` for server initialization
3. **Monitor token expiration**: Check logs for authentication issues
4. **Plan for re-authentication**: Some providers don't support refresh tokens

## Server Transports

MCP servers can be configured to use different transport mechanisms:

**STDIO Servers**

- Work well for local, single-user environments
- Not scalable for remote or cloud deployments
- The bundled MCP SDK limits each individual STDIO message to 10 MB. A larger single result closes the transport with an error; this limit is separate from the total size of a session or stream.

**Server-Sent Events (SSE) Servers**

- Remote transport mechanism but not recommended for production environment

**Streamable HTTP Servers**

- Uses HTTP POST for sending messages and supports streaming responses
- Operates as an independent process that can handle multiple client connections
- Supports both basic requests and streaming via Server-Sent Events (SSE)
- More performant alternative to the legacy HTTP+SSE transport
- Supports proper multi-user server configurations

**For production environments**, only MCP servers with ["Streamable HTTP" transports](https://modelcontextprotocol.io/specification/draft/basic/transports/streamable-http) are recommended. Unlike SSE which maintains long-running connections, Streamable HTTP offers stateless options that are better suited for scalable, multi-user deployments.

LibreChat is at the forefront of implementing flexible, scalable MCP server integrations to support diverse usage scenarios and help you build the AI workflows of tomorrow.

---

**Ready to extend your AI capabilities?** Start by configuring your first MCP server and discover how LibreChat can connect to virtually any tool or service your organization needs.
